[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-graph"
version = "1.0.0"
description = "Hybrid knowledge graph with NetworkX + SQLite for AI agent memory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "structlog>=24.0",
    "pydantic>=2.0",
    "fastapi>=0.115.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_graph"]
